--- a/index.html
+++ b/index.html
@@ -1173,7 +1173,7 @@
                 <div class="hero-image">
                     <div class="photo-container">
                         <div class="photo-frame">
-                            <img src="C:\My Files Aman\Digital Portfolio\Navneet Bengaluru.jpg" alt="Navneet Kumar">
+                            <img src="/Navneet Bengaluru.jpg" alt="Navneet Kumar">
                         </div>
                     </div>
                 </div>
