--- a/index.html
+++ b/index.html
@@ -1135,7 +1135,7 @@
             <nav class="navbar">
                 <a href="#" class="logo">
                     <div class="logo-img">
-                        <img src="C:\My Files Aman\Digital Portfolio\Navneet Bengaluru.jpg" alt="Navneet Kumar">
+                        <img src="/Navneet Bengaluru.jpg" alt="Navneet Kumar">
                     </div>
                     <span>Navneet Kumar</span>
                 </a>
